Bug 1356695 - Ensure gfxPrefs is initialized if gfxPlatform::AsyncPanZoomEnabled is called early in startup. r=milan, a=gchang

MozReview-Commit-ID: CnHHcuZRPTc

--HG--
extra : source : fd9fa4e180c61e69115341738acc096168a8559f